Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2144

segmentation fault when lfsck_xxx run multiple times under the same lctl shell

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.3.0, Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • 2
    • 3
    • 5152

      The following operations will cause user space segmentation fault:

      #lctl
      lctl > lfsck_start -M lustre-MDT0000
      lctl > lfsck_start -h
      Segmentation fault (core dumped)

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: